# codex-vibe-monitor

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESGIN.md  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  biome.json  dprint.json  lefthook.yml  package-lock.json  package.json
.github/: quality-gates.json
.github/scripts/: assemble-pages-site.sh  build-smoke-image-with-retry.sh  check-bun-first.sh  check_live_quality_gates.py  check_quality_gates_contract.py  compute-version.sh  metadata_gate.py  release_snapshot.py  run-backend-tests.sh  run_trusted_metadata_check.py  smoke-test-image.sh  test-build-smoke-image-with-retry.sh  test-inline-metadata-workflows.sh  test-live-quality-gates.sh  test-quality-gates-contract.sh  test-release-snapshot.sh  test-run-trusted-metadata-check.sh
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  docs-pages.yml  label-gate.yml  release-snapshot-pr.yml  release.yml  review-policy.yml
config/: model-pricing.json
docs/: deployment.md  forward-proxy-backtest.md  system-design.md
docs-site/: package.json  rspress.config.ts
docs-site/docs/: 404.md  config.md  deployment.md  development.md  index.md  product.md  quick-start.md  storybook-guide.mdx  storybook.mdx  troubleshooting.md
docs/adr/: 0001-separate-image-rewrite-from-image-capability.md
docs/plan/: README.md
docs/specs/: README.md
docs/ui/: README.md  components.md  data-viz.md  foundations.md  impeccable-audit.md  patterns.md  storybook.md
scripts/: dev-status.sh  export_brand_assets.py  forward_proxy_backtest.py  install-hooks.sh  run-lefthook-hook.sh  search-raw  shared-testbox-api-read-smoke  shared-testbox-proxy-parallel-smoke  shared-testbox-raw-smoke  start-backend.sh  start-frontend.sh  stop-backend.sh  stop-frontend.sh  sync-worktree-resources.sh  test-worktree-bootstrap.sh  worktree-bootstrap.sh  worktree-setup.sh  worktree-sync.paths
src/: app_state.rs  config.rs  dashboard_network_speed.rs  db_pressure.rs  external_api.rs  http_stream_tracking.rs  main.rs  oauth_bridge.rs  pricing.rs  proxy.rs  runtime.rs  schema.rs  share_links.rs  sqlite_batch_writer.rs
src/api/: mod.rs
src/forward_proxy/: mod.rs
src/maintenance/: archive.rs  archive_hourly_rollup_support.rs  cli.rs  hourly_rollup_archive_support.rs  hourly_rollups.rs  mod.rs  retention.rs  startup_backfill.rs  startup_prep.rs
src/proxy/: dispatch.rs  failover.rs  mod.rs  payload_utils.rs  raw_capture.rs  request_entry.rs  route_selection.rs  section_01.rs  section_02.rs  section_03.rs  section_04.rs  section_05.rs  section_06.rs  section_07.rs  section_08.rs  stream_gate.rs  upstream_transport.rs  usage_persistence.rs  websocket.rs
src/stats/: mod.rs
src/tests/: mod.rs
src/upstream_accounts/: core.rs  core_models_rows.rs  core_runtime_types.rs  core_schema_maintenance.rs  crud_group_notes.rs  external_api_integration.rs  imports_jobs_sse.rs  maintenance_dispatch.rs  mod.rs  oauth_sessions_callbacks.rs  routing.rs  sync.rs  sync_account_imports_tags.rs  sync_group_sessions.rs  sync_mailbox_and_filters.rs  sync_oauth_crypto_utils.rs  sync_routing_status.rs  tests.rs  tests_part_1.rs  tests_part_2.rs  tests_part_3.rs  tests_part_4.rs  tests_part_5.rs  tests_part_6.rs  tests_part_7.rs
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.pwa.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
web/.storybook/: main.ts  preview.ts  vitest.setup.ts
(+1691 files in other folders)
