[package]
name = "codex-vibe-monitor"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
once_cell = "1.19"
flate2 = "1.1"
