[package]
name = "codex-vibe-monitor"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
base64 = "0.22"
aes-gcm = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process"] }
axum = { version = "0.7", features = ["macros", "json", "ws"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
once_cell = "1.19"
flate2 = "1.1"
async-compression = { version = "0.4", features = ["tokio", "gzip", "deflate", "zlib", "zstd"] }
brotli = "8.0"
rand = "0.8"
nanoid = "0.4.0"
hmac = "0.12"
sha2 = "0.10"
libc = "0.2"
httpdate = "1.0"
zstd = "0.13"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tungstenite = { version = "0.28", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
webpki-roots = "1"

[dev-dependencies]
filetime = "0.2"
